deployment/03_apps/whoami/whoami.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: whoami-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotation:
    cert-manager.io/cluster-issuer: cloudflare-dns-acme-ca
spec:
  rules:
  - host: whoami.weyrich.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami-service
          servicePort: http
  tls:
    - hosts:
        - whoami.weyrich.dev
      secretName: whoami-ingress-secret
